Paramétrage du controller Reduction
