# storage/docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Swagger Petstore",
-        "description": "This is a sample server Petstore server.  You can find out more about Swagger at <a href=\"http://swagger.io\">http://swagger.io</a> or on irc.freenode.net, #swagger.  For this sample, you can use the api key \"special-key\" to test the authorization filters",
+        "title": "API Mycine.com ",
+        "description": "Voici l'API permettant de r\u00e9cup\u00e9rer des informations d'une base de donn\u00e9es d'oeuvres cin\u00e9matographique.",
         "termsOfService": "http://helloreverb.com/terms/",
         "contact": {
             "email": "apiteam@wordnik.com"
@@ -13,8 +13,8 @@
         },
         "version": "1.0.0"
     },
-    "host": "petstore.swagger.io",
-    "basePath": "/v2",
+    "host": "mycine.com",
+    "basePath": "/",
     "schemes": [
         "http"
     ],
@@ -36,6 +36,53 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/Perrsonne"
+                            }
+                        }
+                    }
+                }
+            }
+
+        },
+        "/reduction": {
+            "get": {
+                "tags": [
+                    "reduction"
+                ],
+                "summary": "Affiche une liste de r\u00e9ductions.",
+                "produces": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Reduction"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/reduction/{$id}": {
+            "get": {
+                "tags": [
+                    "reduction"
+                ],
+                "summary": "Affiche une r\u00e9duction sp\u00e9cifique.",
+                "produces": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Reduction/{$id}"
                             }
                         }
                     }
